# nvidia-ngx-wrapper

./: CMakeLists.txt  Dockerfile  README.md  cmake.txt  extract_ngx_sdk.sh
include/ngx/: nvsdk_ngx.h  nvsdk_ngx_defs.h
lib/: CMakeLists.txt  ngx-wrapper.cpp
lib/core/: CMakeLists.txt  cudnn_wrappers.cpp  cudnn_wrappers.h  log.h  macro_helpers.h  ngx_wrapper.h  unicode.cpp  unicode.h  win_types.h  winapi.cpp  winapi.h
lib/isr/: crt_hooks.h  cuda_wrappers.cpp  cuda_wrappers.h
lib/nvcuda/: CMakeLists.txt  README.txt  internal.c  log.h  nvcuda.c  nvcuda.h
tools/: CMakeLists.txt
tools/common/: CMakeLists.txt  CmdArgsMap.hpp  Logger.h  image_io_util.hpp  ngx_sign.cpp  ngx_sign.h
tools/isr/: CMakeLists.txt  isr.cpp
